# ohsome-py

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: ci-development.yml  ci-production.yml  ci-tests.yml  create_issue_branch.yml
notebooks/: Public_Green_Spaces_in_OSM.ipynb  Tutorial.ipynb  example.ipynb
ohsome/: __init__.py  client.py  clients.py  constants.py  exceptions.py  filter.py  helper.py  response.py  utils.py
ohsome/test/: __init__.py  conftest.py  test_client.py  test_exceptions.py  test_filter.py  test_helper.py  test_response.py  test_utils.py
ohsome/test/cassettes/test_client/: test_bbox_numpy.yaml  test_check_time_parameter_datetime.yaml  test_check_time_parameter_datetimeindex.yaml  test_check_time_parameter_list.yaml  test_check_time_parameter_series.yaml  test_end_timestamp_as_time_input.yaml  test_format_bboxes_dataframe.yaml  test_format_bboxes_list.yaml  test_format_bcircles_dataframe.yaml  test_format_bcircles_geodataframe.yaml  test_format_bcircles_list.yaml  test_format_bcircles_pandas.yaml  test_format_bpolys.yaml  test_get_metadata.yaml  test_post_with_endpoint_string.yaml  test_start_and_end_timestamp.yaml  test_user_agent.yaml
ohsome/test/cassettes/test_exceptions/: test_disable_logging.yaml  test_exception_connection_reset.yaml  test_exception_invalid_parameters.yaml  test_invalid_url.yaml  test_log_bpolys.yaml  test_log_curl.yaml  test_timeout_error.yaml
ohsome/test/cassettes/test_response/: test_all_columns_with_timestamps_to_be_without_timezone.yaml  test_contributions_centroid.yaml  test_contributions_count_density_groupbyboundary.yaml  test_contributions_latest.yaml  test_elementsFullHistory_geometry.yaml  test_elements_count.yaml  test_elements_count_groupby_boundary.yaml  test_elements_count_groupby_boundary_groupby_tag.yaml  test_elements_count_groupby_key.yaml  test_elements_count_groupby_tag.yaml  test_elements_count_groupby_type.yaml  test_elements_count_ratio.yaml  test_elements_count_ratio_groupby_boundary.yaml  test_elements_density.yaml  test_elements_geometry.yaml  test_empty_geodataframe.yaml  test_extra_tags_argument.yaml  test_multi_index_false.yaml  test_not_implemented_query.yaml  test_users_timestamp.yaml
ohsome/test/data/: invalid_response.txt  invalid_response_customCode.txt  invalid_response_no_message.txt  invalid_response_outOfMemory.txt  mixed_geometries.geojson  points.geojson  polygons.geojson
ohsome/tests/: test_client.py  test_exceptions.py  test_response.py  test_utils.py
