[tool.poetry]
name = "ohsome"
version = "0.3.2"
description = "A Python client for the ohsome API"
authors = ["HeiGIT ohsome team <ohsome@heigit.org>", "GIScience Research Group, Heidelberg University"]
repository = "https://github.com/GIScience/ohsome-py"
readme = 'README.md'
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
pandas = "^2.1.3"
numpy = "^1.20.0"
geopandas = "^0.14.1"
urllib3 = "^2.0.2"
curlify2 = "^2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-random-order = "^1.1.0"
pytest-recording = "^0.13.0"
responses = "^0.24.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pre-commit = "^3.5.0"
jupyter = "^1.0.0"

[tool.dephell.main]
from = { format = "poetry", path = "pyproject.toml" }
to = { format = "setuppy", path = "setup.py" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
