[tool.poetry]
name = "ohsome"
version = "0.4.0"
description = "A Python client for the ohsome API"
authors = ["HeiGIT ohsome team <ohsome@heigit.org>", "GIScience Research Group, Heidelberg University"]
repository = "https://github.com/GIScience/ohsome-py"
readme = 'README.md'
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.25.1"
pandas = "^2.1.3"
numpy = "^2.1.2"
geopandas = "^1.0.1"
urllib3 = "^2.0.2"
curlify2 = "^2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-random-order = "^1.1.0"
pytest-recording = "^0.13.0"
responses = "^0.24.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pre-commit = "^3.5.0"
jupyter = "^1.0.0"
pandas-stubs = "^2.3.2.250926"

[tool.dephell.main]
from = { format = "poetry", path = "pyproject.toml" }
to = { format = "setuppy", path = "setup.py" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
