[project]
name = "ohsome"
version = "0.4.0"
description = "A Python client for the ohsome API"
authors = [
    { name = "HeiGIT ohsome team", email = "ohsome@heigit.org" },
    { name = "GIScience Research Group, Heidelberg University" }
]
repository = "https://github.com/GIScience/ohsome-py"
readme = 'README.md'
license = "GPL-3.0"

requires-python = ">=3.11, <4.0"

dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "curlify2 (>=2.0.0,<3.0.0)"
]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-random-order = "^1.1.0"
pytest-recording = "^0.13.0"
responses = "^0.24.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pre-commit = "^3.5.0"
jupyter = "^1.0.0"
pandas-stubs = "^2.3.2.250926"

[tool.dephell.main]
from = { format = "poetry", path = "pyproject.toml" }
to = { format = "setuppy", path = "setup.py" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
